--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "extends": "airbnb",
+  "env": {
+    "mocha": true,
+  },
   "rules": {
     "semi": [2, "never"],
     "no-unused-vars": [2, { "argsIgnorePattern": "^_" }],
