up to here: https://www.fullstackreact.com/articles/react-tutorial-cloning-yelp/\#main-page-and-nested-routes

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,5 +14,12 @@
       "ignoreComments": false,
       "ignorePattern": "\\/"
     }],
+  },
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": "webpack.config.js"
+      }
+    }
   }
 }
