--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
     "presets": ["es2015", "stage-0", "react"],
+    "plugins": ["./relay/babelRelayPlugin"],
     "env": {
         "development": {
             "presets": ["react-hmre"]
