--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
   "env": {
     "mocha": true,
   },
+  "parser": "babel-eslint",
   "rules": {
     "semi": [2, "never"],
     "no-unused-vars": [2, { "argsIgnorePattern": "^_" }],
