--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "fullstack",
   "version": "1.0.0",
-  "description": "",
+  "description": "fullstack react",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development hjs-dev-server",
     "test": "NODE_ENV=test karma start karma.conf.js",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "update-schema": "babel-node ./relay/updateSchema.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -60,6 +62,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.6.3",
+    "graphql": "^0.6.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.4.1",
