--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,12 @@
   "env": {
     "mocha": true,
   },
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true
+    }
+  },
   "rules": {
     "semi": [2, "never"],
     "no-unused-vars": [2, { "argsIgnorePattern": "^_" }],
