--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
@@ -62,7 +63,9 @@
     "font-awesome": "^4.6.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "redux": "^3.5.2",
     "semantic-ui": "Semantic-Org/Semantic-UI#00587e1e523e6d949a831da3252d91993502247d"
   }
 }
