--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "font-awesome": "^4.6.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-google-login": "^2.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
