--- a/package.json
+++ b/package.json
@@ -63,10 +63,13 @@
     "font-awesome": "^4.6.3",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-google-login": "^2.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
+    "redux-form": "^5.2.5",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "semantic-ui": "Semantic-Org/Semantic-UI#00587e1e523e6d949a831da3252d91993502247d"
   }
 }
