--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development hjs-dev-server",
+    "backend-clean": "cd backend && rm -rf build || true",
+    "backend-create": "npm run backend-transpile && cd backend && claudia create --name claudia-lambda --region us-east-1 --handler backend.handler",
+    "backend-deploy": "npm run backend-transpile && cd backend && claudia update",
+    "backend-transpile": "npm run backend-clean && cd backend && babel src --plugins add-module-exports --out-dir build",
     "test": "NODE_ENV=test karma start karma.conf.js",
     "test:watch": "npm run test -- --watch"
   },
@@ -60,8 +64,10 @@
     "yargs": "^4.7.1"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "font-awesome": "^4.6.3",
     "react": "^15.1.0",
+    "react-addons-create-fragment": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
